# breakbias

./: .env.example  .gitignore  README.md  analyze.py  api.py  app.py  collect.py  journal.py  pyproject.toml  requirements.txt  scheduler.py
config/: settings.yaml
config/themes/: semiconductor.yaml
scripts/: backfill.py  backtest.py  health_check.py  seed_demo.py
src/sentiment_radar/: __init__.py  attention.py  backtest.py  config.py  dashboard_data.py  health.py  models.py  notify.py  orchestrate.py  predictions.py  prices.py  rules.py
src/sentiment_radar/collectors/: __init__.py  base.py  naver_blog.py  naver_news.py  newsapi.py  reddit.py  report_naver.py  twitter.py  youtube.py
src/sentiment_radar/db/: __init__.py  database.py  schema.sql
src/sentiment_radar/llm/: __init__.py  classifier.py  commentary.py  cost.py
src/sentiment_radar/pipeline/: __init__.py  aggregate.py  classify.py  dedup.py
src/sentiment_radar/utils/: text.py
tests/: conftest.py  test_aggregate.py  test_attention.py  test_backfill.py  test_backtest.py  test_classifier.py  test_collectors_m3.py  test_commentary.py  test_dashboard_data.py  test_dedup.py  test_health.py  test_orchestrate.py  test_pipeline_m2.py  test_predictions.py  test_rules.py  test_text.py
